--- a/app/views/champions/new.html.erb
+++ b/app/views/champions/new.html.erb
@@ -1,5 +1,2 @@
 <h1>Create your champion</h1>
-<%= simple_form_for @champion do |f| %>
-  <%= f.input :name %>
-  <%= f.submit %>
-<% end %>
+<%= render "form" %>
